@@ -7,6 +7,7 @@ use_ok 'Net::Riak';
 sub import {
     no strict 'refs';
     *{caller()."::test_riak"} = \&{"Test::Riak::test_riak"};
+    *{caller()."::test_riak_pbc"} = \&{"Test::Riak::test_riak_pbc"};
     *{caller()."::new_riak_client"} = \&{"Test::Riak::new_riak_client"};
     strict->import;
     warnings->import;
@@ -15,8 +16,28 @@ sub import {
 
 sub test_riak (&) {
     my ($test_case) = @_;
+    test_riak_rest($test_case);
+    test_riak_pbc($test_case);
+}
 
+sub test_riak_rest (&) {
+    my ($test_case) = @_;
+    
+    if ($ENV{RIAK_REST_HOST}) {
+        diag "Running for REST";
+        my $client = Net::Riak->new(host => $ENV{RIAK_REST_HOST});
+        isa_ok $client, 'Net::Riak';
+        is $client->is_alive, 1, 'connected';
+        run_test_case($test_case, $client, 'REST');
+    }
+    else {
+        diag "Skipping REST tests - RIAK_REST_HOST not set";
+    }
+}
 
+sub test_riak_pbc (&) {
+    my ($test_case) = @_;
+    
     if ($ENV{RIAK_PBC_HOST}) {
 
         diag "Running for PBC";
@@ -34,18 +55,6 @@ sub test_riak (&) {
     } 
     else {
         diag "Skipping PBC tests - RIAK_PBC_HOST not set";
-    }
-
-
-    if ($ENV{RIAK_REST_HOST}) {
-        diag "Running for REST";
-        my $client = Net::Riak->new(host => $ENV{RIAK_REST_HOST});
-        isa_ok $client, 'Net::Riak';
-        is $client->is_alive, 1, 'connected';
-        run_test_case($test_case, $client, 'REST');
-    }
-    else {
-        diag "Skipping REST tests - RIAK_REST_HOST not set";
     }
 }
 
